codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__full_access_confirmation_popup.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: popup
---
  Enable full access?
  When Codex runs with full access, it can edit any file on your computer and
  run commands with network, without your approval. Exercise caution when
  enabling full access. This significantly increases the risk of data loss,
  leaks, or unexpected behavior.

› 1. 是 ， 仍 然 继 续       为 当 前 会 话 启 用  full access
  2. 是 ， 并 且 不 再 提 示   启 用  full access 并 记 住 此 选 择
  3. Cancel            返 回 ， 不 启 用  full access

  按  enter 确 认 ， 按  esc 返 回
