codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__guardian_approved_exec_renders_approved_request.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---






✔ 自动审查器已批准 Codex 执行 rm -f /tmp/guardian-approved.sqlite（本次）


› Ask Codex to do anything

  ? 查看快捷键                                                                                         剩余上下文 100%
