codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__guardian_parallel_reviews_render_aggregate_status.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: rendered
---
• 正 在 审 核  2 个 审 批 请 求  (0s • esc 可 中 断 )
  └ • rm -rf '/tmp/guardian target 1'
    • rm -rf '/tmp/guardian target 2'


› 让  Codex 处 理 任 何 事 情

  ? 查 看 快 捷 键                                          剩 余 上 下 文  100%
