codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__image_generation_call_history_snapshot.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: combined
---
• 生成图片：
  └ A tiny blue square
  └ 保存到：file:///tmp/ig-1.png
