codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__interrupt_preserves_unified_exec_wait_streak.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: snapshot
---
cells=1
■ 对话已中断——请告诉模型接下来该如何调整。
